feat(themes): improvements to some component themes

--- a/src/core/styles/base/_variables.scss
+++ b/src/core/styles/base/_variables.scss
@@ -6,10 +6,10 @@ $keyframes: () !default;
 $components: () !default;
 $excluded: () !default;
 
-$info-color: blue;
-$success-color: green;
-$error-color: red;
-$warn-color: orange;
+$info-color: #0375be;
+$success-color: #4eb862 ;
+$error-color: #ff134a;
+$warn-color: #fbb13c;
 
 $small-screen-up: 601px !default;
 $medium-screen-up: 767px !default;
