--- a/src/core/styles/components/tabbar/_tabbar-component.scss
+++ b/src/core/styles/components/tabbar/_tabbar-component.scss
@@ -38,10 +38,12 @@
         @extend %igx-tabbar-menu-item !optional;
 
         .tab-icon {
+            @extend %igx-tab-icon !optional;
             @extend %igx-tab-icon--selected !optional;
         }
 
         .tab-label {
+            @extend %igx-tab-label !optional;
             @extend %igx-tab-label--selected !optional;
         }
     }
