refactor(demos): changes to some of the demo pages

--- a/demos/app/navbar/sample.component.html
+++ b/demos/app/navbar/sample.component.html
@@ -3,7 +3,7 @@
     <section class="sample-content">
         <article class="sample-column">
             <h4 class="sample-title">With nav and action icons</h4>
-            <div class="navbar-sample">
+            <div class="navbar-sample dark-navbar">
                 <igx-navbar title="Sample App" actionButtonIcon="menu">
                     <igx-icon name="search"></igx-icon>
                     <igx-icon name="favorite"></igx-icon>
