--- a/demos/style/igniteui-theme.scss
+++ b/demos/style/igniteui-theme.scss
@@ -4,11 +4,11 @@
 @include igx-core();
 @include igx-theme();
 
-.dark-grid {
-    $dark-gray: #181818; 
-    $light-gray: #282828;
-    $green: #00b95b;
+$dark-gray: #22252b; 
+$light-gray: #2a2d35;
+$green: #ff134a;
 
+.dark-grid {
     $dark-grid-theme: igx-grid-theme(
         $header-background: $dark-gray,
         $content-background: $light-gray,
@@ -17,17 +17,24 @@
 
     @include igx-grid($dark-grid-theme);
 
-    $filtering-theme: (
-        menu-background: $light-gray,
-        menu-button-text-color: $green,
-        toggle-hover-background: $light-gray,
-        toggle-active-background: $green,
-        toggle-icon-filtered-color: $green
+    $filtering-theme: igx-grid-filtering-theme(
+        $menu-background: lighten($light-gray, 5%),
+        $menu-button-text-color: $green,
+        $toggle-hover-background: $light-gray,
+        $toggle-active-background: $green,
+        $toggle-icon-filtered-color: $green
     );
 
     @include igx-grid-filtering($filtering-theme);
 
-    .igx-filtering {
-        @include igx-input((light: true));
-    }
+    @include igx-input((light: true, focused-accent-color: $green));
+}
+
+.dark-navbar {
+    @include igx-navbar(
+        igx-navbar-theme(
+            $background: $dark-gray,
+            $idle-icon-color: $green
+        )
+    );
 }
