refactor(navbar): refactor the left icon markup

--- a/src/navbar/navbar.component.html
+++ b/src/navbar/navbar.component.html
@@ -1,9 +1,7 @@
 <nav class="igx-navbar" role="navigation" [attr.aria-labelledby]="titleId">
     <div class="igx-navbar__left">
         <span class="igx-navbar__left-btn" *ngIf="!isActionButtonVisible">
-            <button igxButton="navbar" (click)="_triggerAction()">
-                <igx-icon fontSet="material" [name]="actionButtonIcon"></igx-icon>
-            </button>
+            <igx-icon (click)="_triggerAction()" fontSet="material" [name]="actionButtonIcon"></igx-icon>
         </span>
         <span>
             <h1 class="igx-navbar__title" [attr.id]="titleId">{{ title }}</h1>
