--- a/src/grid/grid-filtering.component.html
+++ b/src/grid/grid-filtering.component.html
@@ -26,7 +26,7 @@
     </div>
     <ng-container *ngTemplateOutlet="template; context: { $implicit: this }"></ng-container>
     <div class="igx-filtering__options-bgroup">
-        <button igxButton igxRipple (click)="clearFiltering()" [disabled]="!value">Reset</button>
-        <button igxButton igxRipple (click)="filter()" [disabled]="!value">Filter</button>
+        <button igxButton igxRipple (click)="clearFiltering()" [disabled]="!value && !unaryCondition">Reset</button>
+        <button igxButton igxRipple (click)="filter()" [disabled]="!value && !unaryCondition">Filter</button>
     </div>
 </span>
