--- a/src/grid/row.component.html
+++ b/src/grid/row.component.html
@@ -1,9 +1,9 @@
-<ng-container *ngIf="grid.fixingDirection === 'left'" >
-    <igx-grid-cell *ngFor="let col of fixedColumns" [column]="col" [row]="this" [style.min-width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
+<ng-container *ngIf="pinnedLeftColumns.length > 0" >
+    <igx-grid-cell *ngFor="let col of pinnedLeftColumns" [column]="col" [row]="this" [style.min-width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
 </ng-container>
-<ng-template igxFor let-col [igxForOf]="unfixedColumns" [igxForScrollContainer]="grid.parentVirtDir" let-colIndex="index" [igxForScrollOrientation]="'horizontal'" [igxForContainerSize]='grid.unfixedWidth' #igxDirRef>
+<ng-template igxFor let-col [igxForOf]="unpinnedColumns" [igxForScrollContainer]="grid.parentVirtDir" let-colIndex="index" [igxForScrollOrientation]="'horizontal'" [igxForContainerSize]='grid.unpinnedWidth' #igxDirRef>
 	<igx-grid-cell [column]="col" [row]="this" [style.min-width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
 </ng-template>
-<ng-container *ngIf="grid.fixingDirection === 'right'" >
-    <igx-grid-cell *ngFor="let col of fixedColumns" [column]="col" [row]="this" [style.min-width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
+<ng-container *ngIf="pinnedRightColumns.length > 0" >
+    <igx-grid-cell *ngFor="let col of pinnedRightColumns" [column]="col" [row]="this" [style.min-width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
 </ng-container>
