--- a/src/core/styles/components/navdrawer/_navdrawer-component.scss
+++ b/src/core/styles/components/navdrawer/_navdrawer-component.scss
@@ -2,6 +2,8 @@
 
     flex-basis: 242px;
 
+    @extend %animation !optional;
+
     // Main aside element
     @include e(aside) {
         @extend %adide !optional;
