fix(layout directive): demo sample was wrong

--- a/demos/app/layout/sample.component.html
+++ b/demos/app/layout/sample.component.html
@@ -3,7 +3,9 @@
     <section class="sample-content">
 
         <article class="sample-column">
-            <h4 class="sample-title">Layout direction <i class="light">Row</i></h4>
+            <h4 class="sample-title">Layout direction
+                <i class="light">Row</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutDir="row">
                     <div class="layout-box__el" igxFlex>1</div>
@@ -14,7 +16,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Space between children <i class="light">Row</i></h4>
+            <h4 class="sample-title">Space between children
+                <i class="light">Row</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutJustify="space-between">
                     <div class="layout-box__el">1</div>
@@ -25,7 +29,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Space around children <i class="light">Row</i></h4>
+            <h4 class="sample-title">Space around children
+                <i class="light">Row</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutJustify="space-around">
                     <div class="layout-box__el">1</div>
@@ -36,7 +42,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Place children at main axis start <i class="light">Row</i></h4>
+            <h4 class="sample-title">Place children at main axis start
+                <i class="light">Row</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutJustify="start">
                     <div class="layout-box__el">1</div>
@@ -47,7 +55,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Center children along main axis <i class="light">Row</i></h4>
+            <h4 class="sample-title">Center children along main axis
+                <i class="light">Row</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutJustify="center">
                     <div class="layout-box__el">1</div>
@@ -58,9 +68,11 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Place children at main axis end <i class="light">Row</i></h4>
+            <h4 class="sample-title">Place children at main axis end
+                <i class="light">Row</i>
+            </h4>
             <div class="layout-sample">
-                <div class="layout-box" igxLayout igxLayoutJustify="end">
+                <div class="layout-box" igxLayout igxLayoutJustify="flex-end">
                     <div class="layout-box__el">1</div>
                     <div class="layout-box__el">2</div>
                     <div class="layout-box__el">3</div>
@@ -69,7 +81,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Place children at cross axis start <i class="light">Row</i></h4>
+            <h4 class="sample-title">Place children at cross axis start
+                <i class="light">Row</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box tall" igxLayout igxLayoutItemAlign="flex-start">
                     <div class="layout-box__el" igxFlex>1</div>
@@ -80,7 +94,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Center children along cross axis <i class="light">Row</i></h4>
+            <h4 class="sample-title">Center children along cross axis
+                <i class="light">Row</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box tall" igxLayout igxLayoutItemAlign="center">
                     <div class="layout-box__el" igxFlex>1</div>
@@ -91,7 +107,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Place children at cross axis end <i class="light">Row</i></h4>
+            <h4 class="sample-title">Place children at cross axis end
+                <i class="light">Row</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box tall" igxLayout igxLayoutItemAlign="flex-end">
                     <div class="layout-box__el" igxFlex>1</div>
@@ -102,7 +120,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Wrap children <i class="light">Row</i></h4>
+            <h4 class="sample-title">Wrap children
+                <i class="light">Row</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutDir="row" igxLayoutWrap="wrap">
                     <div class="layout-box__el wrap-row" igxFlex igxFlexGrow="0">1</div>
@@ -113,7 +133,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Reversed children layout <i class="light">Row</i></h4>
+            <h4 class="sample-title">Reversed children layout
+                <i class="light">Row</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutDir="row" igxLayoutReverse="true">
                     <div class="layout-box__el" igxFlex>1</div>
@@ -124,7 +146,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Custom children order <i class="light">Row</i></h4>
+            <h4 class="sample-title">Custom children order
+                <i class="light">Row</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutDir="row">
                     <div class="layout-box__el" igxFlex igxFlexOrder="1">1</div>
@@ -135,7 +159,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Layout direction column <i class="light">Column</i></h4>
+            <h4 class="sample-title">Layout direction column
+                <i class="light">Column</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutDir="column">
                     <div class="layout-box__el" igxFlex igxFlexGrow="0">1</div>
@@ -146,7 +172,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Space between children <i class="light">Column</i></h4>
+            <h4 class="sample-title">Space between children
+                <i class="light">Column</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box tall" igxLayout igxLayoutDir="column" igxLayoutJustify="space-between">
                     <div class="layout-box__el">1</div>
@@ -157,7 +185,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Space around children <i class="light">Column</i></h4>
+            <h4 class="sample-title">Space around children
+                <i class="light">Column</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box tall" igxLayout igxLayoutDir="column" igxLayoutJustify="space-around">
                     <div class="layout-box__el">1</div>
@@ -168,7 +198,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Place children at main axis start <i class="light">Column</i></h4>
+            <h4 class="sample-title">Place children at main axis start
+                <i class="light">Column</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box tall" igxLayout igxLayoutDir="column" igxLayoutJustify="start">
                     <div class="layout-box__el">1</div>
@@ -179,7 +211,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Center children along main axis <i class="light">Column</i></h4>
+            <h4 class="sample-title">Center children along main axis
+                <i class="light">Column</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box tall" igxLayout igxLayoutDir="column" igxLayoutJustify="center">
                     <div class="layout-box__el">1</div>
@@ -190,9 +224,11 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Place children at main axis end <i class="light">Column</i></h4>
+            <h4 class="sample-title">Place children at main axis end
+                <i class="light">Column</i>
+            </h4>
             <div class="layout-sample">
-                <div class="layout-box tall" igxLayout igxLayoutDir="column" igxLayoutJustify="end">
+                <div class="layout-box tall" igxLayout igxLayoutDir="column" igxLayoutJustify="flex-end">
                     <div class="layout-box__el">1</div>
                     <div class="layout-box__el">2</div>
                     <div class="layout-box__el">3</div>
@@ -201,7 +237,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Place children at cross axis start <i class="light">Column</i></h4>
+            <h4 class="sample-title">Place children at cross axis start
+                <i class="light">Column</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutDir="column" igxLayoutItemAlign="start">
                     <div class="layout-box__el" igxFlex igxFlexGrow="0">1</div>
@@ -212,7 +250,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Center children along cross axis <i class="light">Column</i></h4>
+            <h4 class="sample-title">Center children along cross axis
+                <i class="light">Column</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutDir="column" igxLayoutItemAlign="center">
                     <div class="layout-box__el" igxFlex igxFlexGrow="0">1</div>
@@ -223,9 +263,11 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Place children at cross axis end <i class="light">Column</i></h4>
+            <h4 class="sample-title">Place children at cross axis end
+                <i class="light">Column</i>
+            </h4>
             <div class="layout-sample">
-                <div class="layout-box" igxLayout igxLayoutDir="column" igxLayoutItemAlign="end">
+                <div class="layout-box" igxLayout igxLayoutDir="column" igxLayoutItemAlign="flex-end">
                     <div class="layout-box__el" igxFlex igxFlexGrow="0">1</div>
                     <div class="layout-box__el" igxFlex igxFlexGrow="0">2</div>
                     <div class="layout-box__el" igxFlex igxFlexGrow="0">3</div>
@@ -234,7 +276,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Wrap children <i class="light">Column</i></h4>
+            <h4 class="sample-title">Wrap children
+                <i class="light">Column</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutDir="column" igxLayoutWrap="wrap">
                     <div class="layout-box__el wrap-column" igxFlex igxFlexGrow="0">1</div>
@@ -245,7 +289,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Reversed children layout <i class="light">Column</i></h4>
+            <h4 class="sample-title">Reversed children layout
+                <i class="light">Column</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutDir="column" igxLayoutReverse="true">
                     <div class="layout-box__el" igxFlex igxFlexGrow="0">1</div>
@@ -256,7 +302,9 @@
         </article>
 
         <article class="sample-column">
-            <h4 class="sample-title">Custom children order <i class="light">Column</i></h4>
+            <h4 class="sample-title">Custom children order
+                <i class="light">Column</i>
+            </h4>
             <div class="layout-sample">
                 <div class="layout-box" igxLayout igxLayoutDir="column">
                     <div class="layout-box__el" igxFlex igxFlexGrow="0" igxFlexOrder="1">1</div>
