--- a/src/time-picker/time-picker.component.scss
+++ b/src/time-picker/time-picker.component.scss
@@ -1,14 +1,14 @@
-ul {
-    border: 1px solid black;
-    list-style-type: none;
-    list-style-position:inside;
-    margin:0;
-    padding:0;
-    max-height: 4.5em; /* 1.5 x 3 */
-    overflow-y: auto;
-}
-li:hover {background-color: #ddd}
+// ul {
+//     border: 1px solid black;
+//     list-style-type: none;
+//     list-style-position:inside;
+//     margin:0;
+//     padding:0;
+//     max-height: 4.5em; /* 1.5 x 3 */
+//     overflow-y: auto;
+// }
+// li:hover {background-color: #ddd}
 
-div.dropdown{
-    width: inherit
-}
+// div.dropdown{
+//     width: inherit
+// }
